# interview-chatbot

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  railway.json
.github/workflows/: security.yml
app/: __init__.py  config.py  main.py  schemas.py  security.py
app/data/: biography.example.md
app/services/: biography_service.py  openai_service.py
tests/: test_biography_service.py  test_chat_endpoint.py  test_config.py  test_health.py  test_openai_service.py  test_schemas.py  test_security.py
