[project]
name = "interview"
version = "0.1.0"
description = "FastAPI backend for the Interview Andres chatbot."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "openai>=1.60.0",
    "pydantic>=2.8.0",
    "python-dotenv>=1.0.0",
    "starlette>=1.3.1",
    "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pip-audit>=2.10.0",
    "pytest>=8.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
